<resources>
    <string name="app_name">思扣</string>
    <string name="kuaiXin">快信</string>
    <string name="addressbook">通讯录</string>
    <string name="myFriend">我的好友</string>
    <string name="myCircle">我的圈子</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="not_download">未下载:</string>
    <string name="normal">按住 说话</string>
    <string name="recording">松开 结束</string>
    <string name="want_to_cancle">松开手指，取消发送</string>
    <string name="shouzhishanghua">手指上滑，取消发送</string>
    <string name="tooshort">录音时间过短</string>
    <string name="net_retry">重试</string>
    <string name="net_cancel">取消</string>
    <string name="net_no">无网络连接，请检查网络后重试</string>
    <string name="net_error">服务器请求异常~</string>
    <string name="net_no_data">无返回数据</string>
    <string name="share_text"></string>
    <string name="share_webpage"></string>
    <string name="share_title"></string>
    <string name="share_logo"></string>
    <string name="sear_searaddress">输入地址,寻找周边美食吧!</string>
    <string name="sear_positioning">定位当前位置</string>
    <string name="ac_searaddress_onceAddresss">历史地址</string>
    <string name="clearOnceAddresss">清空历史地址</string>
    <string name="default_error_msg">程序运行发生异常</string>
    <string name="error_anr">很抱歉程序出现异常,即将退出</string>
    <string name="clickagain">再按一次退出</string>
    <string name="errTips_user_empty">内容不能为空</string>
    <string name="errTips_user_error">用户名有误</string>
    <string name="errTips_user_empty_new">用户名不能为空</string>
    <string name="errTips_phone_empty">手机号不能为空</string>
    <string name="errTips_phone_error">手机号有误</string>
    <string name="errTips_email_empty">内容不能为空</string>
    <string name="errTips_email_error">邮箱号有误</string>
    <string name="errTips_pwd_empty">密码不能为空</string>
    <string name="errTips_pwd_error">请输入正确密码(6&#8211;20字母、数字、符号)</string>
    <string name="errTips_phone_pws_error">用户名或密码错误</string>
    <string name="network_not_connected">网络连接失败，请检查网络设置</string>
    <string name="xml_parser_failed">数据解析异常</string>
    <string name="io_exception_error">文件流异常</string>
    <string name="http_status_code_error">网络异常，错误码：%d</string>
    <string name="http_exception_error">网络异常，请求超时</string>
    <string name="socket_exception_error">网络异常，读取数据超时</string>
    <string name="app_run_code_error">应用程序运行时异常</string>
    <string name="app_error">应用程序错误</string>
    <string name="app_error_message">抱歉，程序异常退出。\n错误报告已收到,会及时修复此问题。</string>
    <string name="submit_report">好的</string>
    <string name="submit_report_subject">思扣- 错误报告</string>
    <string name="submit_report_title">"发送错误报告"</string>
    <string name="addnewadresss">添加新地址</string>
    <string name="tell">电话:</string>
    <string name="plinputtell">请输入电话号码！</string>
    <string name="loading">正在加载...</string>
    <string name="no_update">当前是最新版本！</string>
    <string name="none_wifi">没有wifi连接， 只在wifi下更新</string>
    <string name="timeout">请求超时</string>
    <string name="receive_normal_time">30分钟送达</string>
    <string name="confirm">确定</string>
    <string name="action_settings">Settings</string>
    <string name="buxian">不限</string>
    <string name="gaozhongyixia">高中以下</string>
    <string name="zhongzhuan">中专</string>
    <string name="dazhuan">大专</string>
    <string name="benke">本科</string>
    <string name="yanjiusheng">研究生</string>
    <string name="boshi">博士</string>
    <string name="qita">其他</string>
    <string name="nan">男</string>
    <string name="nv">女</string>
    <string name="queren">确认</string>
    <string name="zaixianxgaing">再想想</string>
    <string name="yuanxiao">院校</string>
    <string name="gexingqianming">个性签名</string>
    <string name="updatename">修改备注</string>
    <string name="joinblack">加入黑名单</string>
    <string name="claer">清空聊天记录</string>
    <string name="deleteuser">删除好友</string>
    <string name="shanchuliyou">请选择删除理由</string>
    <string name="buchong">补充说明</string>
    <string name="groupname">圈子名称</string>
    <string name="groupinfor">圈子简介</string>
    <string name="groupchengyuan">圈子成员</string>
    <string name="groupnickname">我的圈名片</string>
    <string name="zhuanrnag">圈主转让</string>
    <string name="groupimage">圈子头像</string>
    <string name="zhiding">聊天置顶</string>
    <string name="darao">消息免打扰</string>
    <string name="jubao">举报此圈子</string>
    <string name="reportuser">举报此人</string>
    <string name="query">质疑此人</string>
    <string name="yiqiliao">一起聊</string>
    <string name="tuichu">退出圈子</string>
    <string name="tongyicanjia">同意</string>
    <string name="hulue">拒绝</string>
    <string name="tongzhi">验证消息</string>
    <string name="other">其它通知</string>
    <string name="tongyi">同意</string>
    <string name="yitianjia">已添加</string>
    <string name="yihulue">已忽略</string>
    <string name="tianjia">添加</string>
    <string name="pingbi">屏蔽此人</string>
    <string name="zhiyi">质疑此人</string>
    <string name="faxiaoxi">发消息</string>
    <string name="jiaweihaoyou">加为好友</string>
    <string name="kenengganxingqu">您可能感兴趣的圈子</string>
    <string name="sousuo">搜索</string>
    <string name="guanjaizi">手机号</string>
    <string name="zhaoquanzi">找圈子</string>
    <string name="zhaoren">找人</string>
    <string name="dangqianweizhi">当前地区</string>
    <string name="xuanze">选择地区</string>
    <string name="kenengrenshideren">您可能认识的人</string>
    <string name="school">院校</string>
    <string name="context">个性签名</string>
    <string name="tishi">申请加你为好友，验证消息：</string>
    <string name="tishigroup">申请加**圈子，验证消息：</string>
    <string name="tishigroup2">**邀请您加入##的圈子，验证消息：</string>
    <string name="tonguo">同意</string>
    <string name="jujue">拒绝本次</string>
    <string name="yongjiujujue">永久拒绝</string>
    <string name="setting">设置</string>
    <string name="collection">收藏</string>
    <string name="circle">圈子</string>
    <string name="newMessageRemind">新消息提醒</string>
    <string name="blacklistManagement">黑名单管理</string>
    <string name="friendsValidation">加我为好友时需要验证</string>
    <string name="allowStrangerMessage">允许陌生人给我发消息</string>
    <string name="shoujihao">手机号</string>
    <string name="mima">密码</string>
    <string name="find_password">密码找回</string>
    <string name="denglu">登录</string>
    <string name="zhuce">立即注册</string>
    <string name="wangjimima">忘记密码？</string>
    <string name="yanzhengma">验证码</string>
    <string name="huoquyanzhengma">获取验证码</string>
    <string name="xiayibu">下一步</string>
    <string name="dainjixiayibu">点击下一步代表同意</string>
    <string name="yonghuxuke"><u>用户许可协议</u></string>
    <string name="shurumima">输入6—18位的数字和字母组合的密码</string>
    <string name="shurunewmima">输入新密码</string>
    <string name="tijiao">提交</string>
    <string name="diqu">地区</string>
    <string name="xingming">姓名</string>
    <string name="zhnegjianleixing">证件类型</string>
    <string name="zhengjainhaoma">证件号码</string>
    <string name="youxiang">邮箱</string>
    <string name="qingshuruxingming">请输入姓名</string>
    <string name="shuruzhengjianhao">请输入证件号码</string>
    <string name="shuruyouxianghao">请输入邮箱号</string>
    <string name="queding">确定</string>
    <string name="youxiangtishi">新密码已发送至您的邮箱，为确保您的账户安\n全，请尽快登录思扣客户端修改您的密码。</string>
    <string name="login_exception">登录发生异常</string>
    <string name="count_down_get_vcode">%d秒后可再次获取</string>
    <string name="qingxuanze">请选择您使用软课表的身份</string>
    <string name="jiaoshi">老师</string>
    <string name="xuesheng">学生</string>
    <string name="xuexiao">学校</string>
    <string name="kecheng">课程</string>
    <string name="shuruxuexiao">请输入学校名称</string>
    <string name="shangkeshijian">上课时间</string>
    <string name="xuehao">学号</string>
    <string name="zuiduo">最多可输入20个数字/字母</string>
    <string name="qingxuanz">请选择</string>
    <string name="yuanxi">院系</string>
    <string name="yuanxixuanze">选择院系</string>
    <string name="zhuanye">专业</string>
    <string name="xuanzezhaunye">选择专业</string>
    <string name="ruxuenianfen">开学日期</string>
    <string name="xuanzeshijain">选择时间</string>
    <string name="xueqi">学年学期</string>
    <string name="dangqianzhoushu">当前周数</string>
    <string name="classname">班级</string>
    <string name="qingchukechengxinxi">清除课程信息</string>
    <string name="biangengshenfen">变更当前身份</string>
    <string name="basicAction_1">删除</string>
    <string name="basic_action_2">Action_2</string>
    <string name="basic_del">Delete</string>
    <string name="str_orange">#fe7b27</string>
    <string name="str_green">#3cac69</string>
    <string name="str_red">#FF4444</string>
    <string name="str_yellow">#FFBB33</string>
    <string name="str_sky_blue">#33B5E5</string>
    <string name="empty"></string>
    <string name="mon">周一</string>
    <string name="tue">周二</string>
    <string name="wen">周三</string>
    <string name="thu">周四</string>
    <string name="fri">周五</string>
    <string name="sta">周六</string>
    <string name="sun">周日</string>
    <string name="my_state">我的状态</string>
    <string name="mycollect">我的收藏</string>
    <string name="mysale">我的出售</string>
    <string name="mytobuy">我的求购</string>
    <string name="releasesale">发布出售信息</string>
    <string name="releasetobuy">发布求购信息</string>
    <string name="trade_shanchu">删除成功</string>
    <string name="trade_caozhuo">操作成功</string>
    <string name="trade_shuaxin">刷新成功</string>
    <string name="trade_no_moredata">未获取到更多数据！</string>
    <string name="trade_shuru_zishu">请输入至少2个字</string>
    <string name="trade_shuru_zishu5">最多15个字符！</string>
    <string name="trade_xiugai">修改成功</string>
    <string name="trade_fabu">发布成功</string>
    <string name="trade_shangchuan_tp">请上传图片，最少一张</string>
    <string name="trade_shangchuan_tp_dd">图片还在上传中，请稍后再提交！</string>
    <string name="trade_xxdz">填完学校后才能填写地址</string>
    <string name="trade_no_bt">标题不能为空</string>
    <string name="trade_no_jg">价格不能为空</string>
    <string name="trade_no_lb">类别不能为空</string>
    <string name="trade_no_cs">成色不能为空</string>
    <string name="trade_no_xux">学校不能为空</string>
    <string name="trade_no_dz">地址不能为空</string>
    <string name="cal_cre_activi">创建活动</string>
    <string name="cal_up_image">图片还在上传中…请稍等</string>
    <string name="cal_sel_data">选择日期</string>
    <string name="cal_sel_time">选择时间</string>
    <string name="cal_rem_time">提醒时间</string>
    <string name="cal_is_pub">是否公开</string>
    <string name="cal_call_off">您确定取消活动？</string>
    <string name="cal_confirm">确定</string>
    <string name="cal_user_list">活动成员</string>
    <string name="cal_start_end_time">结束日期应大于开始日期,请重新选择</string>
    <string name="cal_activi_name">活动名称不能为空!</string>
    <string name="cal_activi_stat_data">活动日期始不能为空!</string>
    <string name="cal_activi_end_data">活动日期止不能为空!</string>
    <string name="cal_activi_image">活动图片不能为空!</string>
    <string name="cal_activi_time">活动时间不能为空!</string>
    <string name="cal_activi_address">活动地点不能为空!</string>
    <string name="cal_out_activi">退出活动</string>
    <string name="cal_out_activi_confirm">您确定退出活动？</string>
    <string name="cal_apply_join">申请加入</string>
    <string name="cal_apply_send">申请已发送</string>
    <string name="cal_seach_activi">搜索活动</string>
    <string name="cal_select_address">选择地点</string>
    <string name="cal_select_city">选择城市</string>
    <string name="cal_ed_activi_address">请输入活动地点</string>
    <string name="cal_max_image">已达到最多图片数量</string>
    <string name="cal_select_group">选择圈子</string>
    <string name="cal_create">创建</string>
    <string name="cal_add_lable">添加标签</string>
    <string name="cal_max_lable">最多不能超过三个标签</string>
    <string name="cal_activi">勤务安排</string>
    <string name="cal_look">查看</string>
    <string name="cal_study_plan">教与学计划</string>
    <string name="cal_cancel_activi">取消活动</string>
    <string name="pull_to_refresh_pull_label">下拉刷新&#8230;</string>
    <string name="pull_to_refresh_release_label">松开刷新&#8230;</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新&#8230;</string>
    <string name="pull_to_loadmore_pull_label">上拉加载更多&#8230;</string>
    <string name="pull_to_loadmore_release_label">松开加载&#8230;</string>
</resources>