<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_title" >

    <include
        android:id="@+id/include"
        layout="@layout/login_title" />

    <EditText
        android:id="@+id/edit_call_num"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_48"
        android:layout_below="@+id/include"
        android:layout_marginLeft="@dimen/view_16"
        android:layout_marginRight="@dimen/view_16"
        android:layout_marginTop="@dimen/view_16"
        android:hint="@string/shoujihao"
        android:paddingLeft="@dimen/view_8"
        android:inputType="number"
        android:textColor="@color/color_smoke"
        android:textSize="@dimen/text_small_l"
        android:digits="1234567890."
        android:maxLength="11"
        android:singleLine="true"
        android:background="@drawable/bg_edittext_normal"
        />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_48"
        android:layout_below="@+id/edit_call_num"
        android:layout_marginTop="@dimen/view_8"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edit_testing_num"
            android:layout_width="@dimen/view_0"
            android:layout_height="@dimen/view_48"
            android:layout_marginLeft="@dimen/view_16"
            android:layout_marginRight="@dimen/view_16"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="@string/yanzhengma"
            android:paddingLeft="@dimen/view_8"
            android:textColor="@color/color_smoke"
            android:textSize="@dimen/text_small_l"
            android:digits="1234567890."
            android:singleLine="true"
            android:background="@drawable/bg_edittext_normal"
            />

        <com.thinkcoo.mobile.presentation.views.component.CountDownButton
            android:id="@+id/butt_obtain_testing_num"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/view_48"
            android:layout_marginRight="@dimen/view_16"
            android:background="@drawable/ac_shape_but_bule"
            android:text="@string/huoquyanzhengma"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_small_l" />
    </LinearLayout>

    <Button
        android:id="@+id/butt_next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_48"
        android:text="@string/xiayibu"
        android:background="@drawable/ac_shape_but_bule"
        android:textColor="@color/color_white"
        android:layout_below="@+id/layout"
        android:layout_marginTop="@dimen/view_40"
        android:layout_marginLeft="@dimen/view_16"
        android:layout_marginRight="@dimen/view_16"
        />

    <TextView
        android:id="@+id/text_user_deal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_small_l"
        android:textColor="@color/color_blue"
        android:layout_below="@+id/butt_next"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/view_16"
        android:layout_marginRight="@dimen/view_16"
        />
    <TextView
        android:id="@+id/text_user_deal_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dainjixiayibu"
        android:textSize="@dimen/text_small_l"
        android:textColor="@color/color_smoke"
        android:layout_below="@+id/butt_next"
        android:layout_marginTop="@dimen/view_16"
        android:layout_toLeftOf="@+id/text_user_deal"
        android:layout_marginRight="@dimen/view_2"
        />

</RelativeLayout>