<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_title" >

    <include
        android:id="@+id/include"
        layout="@layout/login_title" />

    <RelativeLayout
        android:id="@+id/ac_input_pwd_lay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_48"
        android:layout_below="@+id/include"
        android:layout_margin="@dimen/view_16" >

        <EditText
            android:id="@+id/ac_input_edit_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_48"
            android:background="@drawable/bg_edittext_normal"
            android:hint="@string/shurumima"
            android:paddingLeft="@dimen/view_8"
            android:inputType="text"
            android:textColor="@color/color_smoke"
            android:textSize="@dimen/text_small_m" />

        <ImageView
            android:id="@+id/img_look_pwd"
            android:layout_width="@dimen/view_48"
            android:layout_height="@dimen/view_48"
            android:layout_alignBottom="@+id/ac_input_edit_pwd"
            android:layout_alignRight="@+id/ac_input_edit_pwd"
            android:layout_alignTop="@+id/ac_input_edit_pwd"
            android:padding="@dimen/view_12"
            android:scaleType="centerInside"
            android:src="@mipmap/yincangmima" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ac_input_location_lay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_48"
        android:layout_below="@+id/ac_input_pwd_lay"
        android:layout_margin="@dimen/view_16"
        android:background="@drawable/bg_edittext_normal"
        android:visibility="gone"
        >

        <TextView
            android:id="@+id/edit_choose_privoer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diqu"
            android:focusable="false"
            android:paddingLeft="@dimen/view_8"
            android:layout_centerVertical="true"
            android:textColor="@color/color_smoke"
            android:textSize="@dimen/text_small_m" />


        <ImageView
            android:id="@+id/button_chooes_provice"
            android:layout_width="@dimen/view_48"
            android:layout_height="@dimen/view_48"
            android:layout_alignParentRight="true"
            android:src="@mipmap/dayu"
            android:padding="@dimen/view_12"
            android:scaleType="centerInside"
            />


        <TextView
            android:id="@+id/text_choose_provice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/button_chooes_provice"
            android:text="请选择"
            android:gravity="center_vertical"
            android:textColor="@color/color_smoke"
            android:textSize="@dimen/text_small_m" />
    </RelativeLayout>

    <Button
        android:id="@+id/butt_commit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_48"
        android:layout_below="@+id/ac_input_location_lay"
        android:layout_margin="@dimen/view_16"
        android:background="@drawable/ac_shape_but_bule"
        android:text="@string/tijiao"
        android:textColor="@color/color_white"
        android:textSize="@dimen/text_small_l" />

</RelativeLayout>